2010-07-11  Magnus Henoch  <magnus.henoch@gmail.com>

	* tramp-gvfs.el (tramp-gvfs-handle-copy-file): Do not pass empty
	argument to gvfs-copy.

2010-06-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-process-environment): Protect version
	string by apostroph.
	(tramp-shell-prompt-pattern): Do not use a shy group in case of
	XEmacs.
	(tramp-file-name-for-operation): Add `call-process-region'.
	(tramp-set-process-query-on-exit-flag): Fix wrong parentheses.

	* tramp-compat.el (top): Do not autoload
	`tramp-handle-file-remote-p'.  Load tramp-util.el and tramp-vc.el
	only when `start-file-process' is not bound.
	(tramp-advice-file-expand-wildcards): Do not use
	`tramp-handle-file-remote-p'.
	(tramp-compat-make-temp-file): Handle the case, that
	`make-temp-file' has no third argument EXTENSION.

	* tramp-util.el (top): Apply advices only when there are no file
	name handlers for `start-file-process' and `process-file'.

2010-06-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-handle-expand-file-name): Expand "~/".
	(tramp-gvfs-handler-mounted-unmounted)
	(tramp-gvfs-connection-mounted-p): Handle default-location.

	* tramp-smb.el (tramp-smb-handle-delete-directory): Don't try to
	move files to trash.

2010-06-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (top): Require url-util.
	(tramp-gvfs-mount-point): Removed.
	(tramp-gvfs-stringify-dbus-message, tramp-gvfs-send-command): New
	defuns.
	(with-tramp-dbus-call-method): Format trace message.
	(tramp-gvfs-handle-copy-file, tramp-gvfs-handle-rename-file):
	Implement backup call, when operation on local files fails.  Use
	progress reporter.  Flush properties of changed files.
	(tramp-gvfs-handle-make-directory): Make more traces.
	(tramp-gvfs-url-file-name): Hexify file name in url.
	(tramp-gvfs-fuse-file-name): Take also prefix (like dav shares)
	into account for the resulting file name.
	(tramp-gvfs-handler-askquestion): Return dummy mountpoint, when